fix logo spacing, update yml

--- a/material/assets/stylesheets/application.css
+++ b/material/assets/stylesheets/application.css
@@ -456,6 +456,8 @@ hr {
           backface-visibility: hidden; }
   .no-js .md-header {
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2); }
+  .md-header .md-header-nav .md-flex__cell a {
+    padding: .2rem 0 .2rem 1.2rem; }
 
 .md-flex__cell .md-header-nav__source {
   -webkit-box-align: center;
@@ -488,8 +490,6 @@ hr {
       display: block; }
     .no-js .md-header-nav__button.md-icon--search {
       display: none; }
-    .md-header-nav__button .md-flex .md-flex__cell a.md-logo {
-      padding: .2rem 0 .2rem 1.2rem; }
   .md-header-nav__title {
     padding: 0 2rem;
     font-size: 1.8rem;
